# tskit

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .mergify.yml  .mypy.ini  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  appveyor.yml  codecov.yml  prek.toml  setup.py
.circleci/: config.yml
.circleci/images/32bit/: Dockerfile
.dependabot/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docs.yml  lint.yml  mypy.yml  release-c.yml  release.yml  tests.yml  wheels.yml
.github/workflows/docker/: buildwheel.sh  shared.env
c/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Makefile  VERSION  meson.build  old_tests.c  test_convert.c  test_genotypes.c  test_stats.c  test_trees.c  tsk_convert.c  tsk_convert.h  tsk_core.h  tsk_genotypes.c  tsk_genotypes.h  tsk_stats.c  tsk_stats.h  tsk_tables.c  tsk_tables.h  tsk_trees.c  tsk_trees.h  tskit.h  tskitpp.hpp
c/dev-tools/: dev-cli.c
c/examples/: Makefile  api_structure.c  cpp-experiment.cpp  cpp_sorting_example.cpp  efficient_forward_simulation.c  error_handling.c  haploid_wright_fisher.c  haplotype_benchmark.c  json_struct_metadata.c  multichrom_wright_fisher.c  multichrom_wright_fisher_singlethreaded.c  streaming.c  take_ownership.c  tree_iteration.c  tree_traversal.c
c/subprojects/: kastore  kastore.wrap
c/subprojects/kastore/: kastore.c  kastore.h  meson.build
c/tests/: old_tests.c  test_convert.c  test_core.c  test_cpp_tables.cpp  test_file_format.c  test_genotypes.c  test_haplotype_matching.c  test_minimal_cpp.cpp  test_stats.c  test_tables.c  test_trees.c  testlib.c  testlib.h
c/tests/meson-subproject/: example.c  meson.build
c/tests/meson-subproject/subprojects/: kastore  kastore.wrap
c/tskit/: convert.c  convert.h  core.c  core.h  genotypes.c  genotypes.h  haplotype_matching.c  haplotype_matching.h  stats.c  stats.h  tables.c  tables.h  trees.c  trees.h
c/tskitpp/: NodeTable.cpp  NodeTable.hpp  TableCollection.cpp  TableCollection.hpp  tables.cpp  tables.hpp  util.cpp  util.hpp
cpp/examples/: haploid_wright_fisher_cpp.cc
cpp/tskitpp/: TableCollection.hpp  table_collection.hpp  table_collection_ptr.hpp
docs/: .gitignore  Makefile  _config.yml  _toc.yml  build.sh  c-api.md  c-api.rst  changelogs.rst  citation.md  cli.md  cli.rst  combinatorics.md  combinatorics.rst  conf.py  convert_changelog.py  data-model.md  data-model.rst  development.md  development.rst  documentation_report.py  examples.py  export.md  file-formats.md  glossary.md  ibd.md  index.rst  index_rename_to_get_404_redirect.rst  installation.md  installation.rst  interchange.rst  introduction.md  introduction.rst  metadata.md  metadata.rst  numba.md  provenance.md  provenance.rst  python-api.md  python-api.rst  quickstart.md  (+5 more)
docs/_static/: README  bespoke.css
docs/data/: basic_tree_seq.arg
docs/doxygen/: Doxyfile
docs/substitutions/: linear_traversal_warning.rst  table_edit_warning.rst  table_keep_rows_main.rst  tree_array_warning.rst  virtual_root_array_note.rst
python/: .flake8  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  _tskit_lwt_interface.h  _tskitmodule.c  c-library  development.yml  pyproject.toml  ruff.toml  setup.cfg  setup.py  stress_lowlevel.py  test_dice.py  untilfail.sh
python/benchmark/: bench-results.html  bench-results.json  config.yaml  run-for-all-releases.py  run.py
python/lwt_interface/: CHANGELOG.rst  Makefile  README.md  dict_encoding_testlib.py  example_c_module.c  setup.py  test_example_c_module.py  tskit_lwt_interface.h
python/lwt_interface/cython_example/: Makefile  _lwtc.c  example.pyx  pyproject.toml  setup.py
python/requirements/: CI.txt  appveyor-pypi.txt  benchmark.txt  conda-minimal.txt  development.txt  development.yml  docs.txt
python/requirements/CI/: requirements.txt
python/requirements/CI-complete/: requirements.txt
python/requirements/CI-docs/: requirements.txt
python/requirements/CI-tests-conda/: requirements.txt
python/requirements/CI-tests-pip/: requirements.txt
python/tests/: __init__.py  beagle_numba.py  conftest.py  fb_diploid_samples_variants.py  fb_diploid_variants_samples.py  fb_haploid_samples_variants.py  fb_haploid_variants_samples.py  fb_haploid_variants_samples_tree.py  ibd.py  simplify.py  test_avl_tree.py  test_balance_metrics.py  test_cli.py  test_coalrate.py  test_coaltime_distribution.py  test_combinatorics.py  test_covariance.py  test_dict_encoding.py  test_distance_metrics.py  test_divmat.py  test_drawing.py  test_extend_edges.py  test_extend_haplotypes.py  test_extend_paths.py  test_fasta.py  test_file_format.py  test_fileobj.py  test_forward_sims.py  test_genotype_matching.py  test_genotype_matching_fb.py  test_genotype_matching_viterbi.py  test_genotypes.py  test_haplotype_and_genotype_matching.py  test_haplotype_matching.py  test_highlevel.py  test_ibd.py  test_immutable_table_collection.py  test_imputation.py  test_intervals.py  test_jit.py  (+32 more)
python/tests/data/SLiM/: minimal-example.txt  single-locus-example.txt
python/tests/data/dict-encodings/: generate_msprime.py  msprime-0.7.4.pkl
python/tests/data/old-formats/: tskit-0.3.3.arg
python/tskit/: __init__.py  __main__.py  _version.py  cli.py  combinatorics.py  drawing.py  exceptions.py  formats.py  genotypes.py  intervals.py  metadata.py  metadata_schema.schema.json  provenance.py  provenance.schema.json  stats.py  tables.py  text_formats.py  trees.py  util.py  vcf.py
python/tskit/jit/: numba.py
tmp/: .diskspace  .diskspace1
tskit/: __init__.py
