[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tskit"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "The tree sequence toolkit."
readme = "README.rst"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "statistical genetics",
    "phylogenetics",
    "tskit",
]
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=3.0.0",
    "numpy>=2",
]

[project.urls]
Homepage = "https://tskit.dev/tskit"
Documentation = "https://tskit.dev/tskit/docs/stable"
Changelog = "https://tskit.dev/tskit/docs/stable/changelogs.html"
"Bug Tracker" = "https://github.com/tskit-dev/tskit/issues"
GitHub = "https://github.com/tskit-dev/tskit/"

[project.scripts]
tskit = "tskit.cli:tskit_main"

[tool.setuptools]
packages = ["tskit", "tskit.jit"]

[tool.setuptools.dynamic]
version = {attr = "tskit._version.tskit_version"}

[project.optional-dependencies]
test = [
    "biopython==1.85",
    "coverage==7.7.0", 
    "dendropy==5.0.1",
    "kastore==0.3.3",
    "lshmm==0.0.8",
    "msgpack==1.1.0",
    "msprime==1.3.4",
    "networkx==3.2.1",
    "numba==0.61.2",
    "portion==2.6.0",
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.6.1",
    "tszip==0.2.5",
    "xmlunittest==1.0.1",
    "svgwrite==1.4.3",
    "newick==1.10.0",
    "zarr<3",
]

docs = [
    "jupyter-book==1.0.4.post1",
    "breathe==4.35.0",
    "sphinx-autodoc-typehints==2.3.0",
    "sphinx-issues==5.0.0",
    "sphinx-argparse==0.5.2",
    "msprime==1.3.3",
    "numba==0.61.2",
    "sphinx-book-theme",
    "pandas==2.2.3",
]

dev = [
    "biopython>=1.70",
    "coverage",
    "dendropy",
    "flake8",
    "kastore",
    "lshmm",
    "msgpack",
    "msprime",
    "mypy",
    "networkx",
    "numba",
    "portion",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist", 
    "setuptools_scm",
    "svgwrite",
    "tszip",
    "xmlunittest",
    "newick",
    "zarr<3",
    "jupyter-book",
    "breathe",
    "sphinx-autodoc-typehints",
    "sphinx-issues",
    "sphinx-argparse",
    "sphinx-book-theme",
    "pandas",
]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
