[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tskit"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "The tree sequence toolkit."
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "statistical genetics",
    "phylogenetics",
    "tskit",
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.0.0",
    "numpy>=2",
]

[project.urls]
Homepage = "https://tskit.dev/tskit"
Documentation = "https://tskit.dev/tskit/docs/stable"
Changelog = "https://tskit.dev/tskit/docs/stable/changelogs.html"
"Bug Tracker" = "https://github.com/tskit-dev/tskit/issues"
GitHub = "https://github.com/tskit-dev/tskit/"

[project.scripts]
tskit = "tskit.cli:tskit_main"

[tool.setuptools]
packages = ["tskit", "tskit.jit"]

[tool.setuptools.dynamic]
version = {attr = "tskit._version.tskit_version"}

[project.optional-dependencies]
test = [
    "biopython",
    "coverage",
    "dendropy",
    "kastore",
    "lshmm",
    "msgpack",
    "msprime",
    "networkx",
    "numba",
    "portion",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tszip",
    "xmlunittest",
    "svgwrite",
    "newick",
    "zarr<3",
]

docs = [
    "jupyter-book<2",
    "breathe",
    "sphinx-autodoc-typehints",
    "sphinx-issues",
    "sphinx-argparse",
    "msprime",
    "numba",
    "sphinx-book-theme",
    "pandas",
]

dev = [
    "biopython>=1.70",
    "coverage",
    "dendropy",
    "flake8",
    "kastore",
    "lshmm",
    "msgpack",
    "msprime",
    "mypy",
    "networkx",
    "numba",
    "portion",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist", 
    "setuptools_scm",
    "svgwrite",
    "tszip",
    "xmlunittest",
    "newick",
    "zarr<3",
    "jupyter-book<2",
    "breathe",
    "sphinx-autodoc-typehints",
    "sphinx-issues",
    "sphinx-argparse",
    "sphinx-book-theme",
    "pandas",
    "clang-format==21.1.8",
]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
