[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tskit"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "The tree sequence toolkit."
readme = "README.rst"
license = "MIT"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "population genetics",
    "tree sequence",
    "ancestral recombination graph",
    "evolutionary tree",
    "statistical genetics",
    "phylogenetics",
    "tskit",
]
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=3.0.0",
    "numpy>=2",
]

[project.urls]
Homepage = "https://tskit.dev/tskit"
Documentation = "https://tskit.dev/tskit/docs/stable"
Changelog = "https://tskit.dev/tskit/docs/stable/changelogs.html"
"Bug Tracker" = "https://github.com/tskit-dev/tskit/issues"
GitHub = "https://github.com/tskit-dev/tskit/"

[project.scripts]
tskit = "tskit.cli:tskit_main"

[tool.setuptools]
packages = ["tskit", "tskit.jit"]

[tool.setuptools.dynamic]
version = {attr = "tskit._version.tskit_version"}

[dependency-groups]
test = [
    "biopython",
    "coverage",
    "dendropy",
    "kastore",
    "lshmm",
    "msgpack",
    "msprime==1.4.1b1", # Temp - just to test msprime builds
    "networkx",
    "numba",
    "portion",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "tszip",
    "xmlunittest",
    "svgwrite",
    "newick",
    "zarr",
]

docs = [
    "jupyter-book<2",
    "breathe",
    "sphinx-autodoc-typehints",
    "sphinx-issues",
    "sphinx-argparse",
    "msprime",
    "numba",
    "sphinx-book-theme",
    "pandas",
]

# Fully pin lint requirements for determinism.
lint = [
    "clang-format==21.1.8",
    "ruff==0.15.1",
    "prek==0.3.3",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

line-length = 89
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "E741", # using 'l' as a variable name
    "N806", "N802", "N803", # Various nags about uppercase vars
    "N818", # Exceptions not called "Error"
    "UP032", # Don't upgrade to f strings
    "UP031", # Allow old-skool format specifiers
    "B904", # raise from-issues
    "PT006", # Wrong type passed to first argument of `pytest.mark.parametrize`
    "PT007", # Wrong values type in `pytest.mark.parametrize` expected `list` of `tuple`
    "PT009", # Replace `assertAlmostEqual(...)` with `assert ...`
    "PT018", # Assertion should be broken down into multiple parts
    "PT030", # `pytest.warns(UserWarning)` is too broad, set the `match`
    "PT009", # pytest.raises(ValueError) too broad
    "PT011", # pytest.raises(ValueError) too broad
    "PT012", # pytest.raises() block should contain a single simple statement
    # "B028", # No stacklevel for warnings
    "B018", # Found useless expression. Either assign it
    "PT031", # `pytest.warns()` block should contain a single simple statement
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["_tskit", "tskit", "lwt_interface"]
known-third-party = [
  "msprime",
  "numpy",
  "pytest",
]
