[metadata]
name = tskit
author= Tskit Developers
author_email = admin@tskit.dev
license = MIT
description= The tree sequence toolkit.
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://tskit.dev/tskit
project_urls =
    Documentation = https://tskit.dev/tskit/docs/stable
    Changelog = https://tskit.dev/tskit/docs/stable/changelogs.html
    Bug Tracker = https://github.com/tskit-dev/tskit/issues
    GitHub = https://github.com/tskit-dev/tskit/
classifiers =
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    population genetics
    tree sequence
    ancestral recombination graph
    evolutionary tree
    statistical genetics
    phylogenetics
    tskit
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = tskit
python_requires = >=3.8
include_package_data = True
install_requires =
    jsonschema>=3.0.0
    numpy>=1.7
    svgwrite>=1.1.10
setup_requires =
    numpy>=1.7
    setuptools

[options.entry_points]
console_scripts =
    tskit = tskit.cli:tskit_main

[tool:pytest]
addopts = -n 4
testpaths =
    tests

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0
